# advent_of_code

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  skel.cpp
src/2015/: day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_2.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp  main.cpp
src/2016/: day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_2.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp  main.cpp
src/2017/: day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_2.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp  main.cpp
src/2018/: day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_2.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp  main.cpp
src/2019/: day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_2.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp  main.cpp
src/2020/: day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_2.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp  main.cpp
src/2021/: day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_2.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp  main.cpp
src/2022/: day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_2.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp  main.cpp
src/2023/: day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  main.cpp  (+20 more)
(+50 files in other folders)
